--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+
+bootstrap-5.3.3 
+bootstrap-5.3.3-examples
+node_modules
+.vscode
